Added user functions
